# python-opds-parser

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  tox.ini
src/python_rwpm_parser/: ast.py  errors.py  metadata.py  opds2.py  registry.py  utils.py
src/python_rwpm_parser/parser/: parser.py  semantic.py  syntax.py
src/webpub_manifest_parser/: ast.py  errors.py  metadata.py  opds2.py  registry.py  utils.py
src/webpub_manifest_parser/core/: ast.py  parsers.py  properties.py  semantic.py  syntax.py
src/webpub_manifest_parser/odl/: ast.py  parsers.py  registry.py  semantic.py
src/webpub_manifest_parser/opds2/: ast.py  semantic.py
src/webpub_manifest_parser/parser/: parser.py  semantic.py  syntax.py
tests/: test_registry.py  test_utils.py
tests/files/opds2/: test.json
tests/parser/: test_parser.py  test_semantic.py  test_syntax.py
tests/webpub_manifest_parser/odl/: test_parser.py  test_production_feeds.py
tests/webpub_manifest_parser/opds2/: test_parser.py  test_semantic.py
tests/webpub_manifest_parser/rwpm/: test_semantic.py  test_syntax.py
