[tool.poetry]
name = "python-opds-parser"
version = "0.1.0"
description = ""
authors = ["Leonard Richardson <leonardr@segfault.org>"]

[tool.poetry.dependencies]
python = "^2.7"
multipledispatch = "^0.6.0"
enum34 = "^1.1.10"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
pyfakefs = "3.7"
coverage = "^5.3"
mock = "^3.0.5"
parameterized = "^0.7.4"
pylint = "^1.9.5"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
